syntax = "proto3";
// sys_dict 字典
package dict;
option go_package = "cloud/service/sys/dict;dict";
import "google/protobuf/timestamp.proto";
import "pagination.proto";

// SysDictObject 数据对象
message SysDictObject {
	// @inject_tag: gorm:"primaryKey;autoIncrement;column:id" json:"id"
	optional int64 id = 1; //编号
	// @inject_tag: gorm:"column:sort" json:"sort"
	optional int32 sort = 2; //排序
	// @inject_tag: gorm:"column:label" json:"label"
	optional string label = 3; //标签
	// @inject_tag: gorm:"column:value" json:"value"
	optional string value = 4; //键值
	// @inject_tag: gorm:"column:dict_id" json:"dictId"
	optional int64 dict_id = 5; //字典类型
	// @inject_tag: gorm:"column:color_type" json:"colorType"
	optional string color_type = 6; //颜色类型
	// @inject_tag: gorm:"column:css_class" json:"cssClass"
	optional string css_class = 7; //CSS样式
	// @inject_tag: gorm:"column:status" json:"status"
	optional int32 status = 8; //状态:0正常/1停用
	// @inject_tag: gorm:"column:remark" json:"remark"
	optional string remark = 9; //备注
	// @inject_tag: gorm:"column:creator" json:"creator"
	optional string creator = 10; //创建人
	// @inject_tag: gorm:"column:create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 11; //创建时间
	// @inject_tag: gorm:"column:updater" json:"updater"
	optional string updater = 12; //更新人
	// @inject_tag: gorm:"column:update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 13; //更新时间
}
// SysDictTotalResponse 列表数据总量
message SysDictTotalResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SysDictCreateRequest 创建数据请求
message SysDictCreateRequest {
	SysDictObject data = 1;
}
// SysDictCreateResponse 创建数据响应
message SysDictCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SysDictUpdateRequest 更新数据请求
message SysDictUpdateRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
	SysDictObject data = 2;
}
// SysDictUpdateResponse 更新数据响应
message SysDictUpdateResponse {
	int64 code = 1;
	string msg = 2;
}
// SysDictDeleteRequest 删除数据请求
message SysDictDeleteRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// SysDictDeleteResponse 删除数据响应
message SysDictDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// SysDictRequest 查询单条数据请求
message SysDictRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// SysDictResponse 查询单条数据响应
message SysDictResponse {
	int64 code = 1;
	string msg = 2;
	SysDictObject data = 3;
}
// SysDictListRequest 列表数据
message SysDictListRequest {
	
	// @inject_tag: db:"dict_id" json:"dictId"
	optional int64 dict_id = 1; // 字典类型
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 2; // 状态:0正常/1停用

	// @inject_tag: json:"pagination"
	optional pagination.PaginationRequest pagination = 3; // 分页
}

// SysDictListResponse 数据响应
message SysDictListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SysDictObject data = 3;
}
// SysDictListTotalRequest 列表数据
message SysDictListTotalRequest {
	
	// @inject_tag: db:"dict_id" json:"dictId"
	optional int64 dict_id = 1; // 字典类型
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 2; // 状态:0正常/1停用

}


// SysDictService 服务
service SysDictService{
	rpc SysDictCreate(SysDictCreateRequest) returns (SysDictCreateResponse);
	rpc SysDictUpdate(SysDictUpdateRequest) returns (SysDictUpdateResponse);
	rpc SysDictDelete(SysDictDeleteRequest) returns (SysDictDeleteResponse);
	rpc SysDict(SysDictRequest) returns (SysDictResponse);
	rpc SysDictList(SysDictListRequest) returns (SysDictListResponse);
	rpc SysDictListTotal(SysDictListTotalRequest) returns (SysDictTotalResponse);
}